--- a/FusionMods/App.config
+++ b/FusionMods/App.config
@@ -23,7 +23,7 @@
                 <value>15000</value>
             </setting>
             <setting name="DevMode" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </FusionMods.Properties.Settings>
     </userSettings>
