--- a/FusionMods/Properties/Settings.settings
+++ b/FusionMods/Properties/Settings.settings
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">15000</Value>
     </Setting>
     <Setting Name="DevMode" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
